[package]
name = "bevy_oxr"
version = "0.1.0"
edition = "2021"
description = "Community crate for OpenXR in Bevy"
repository = "https://github.com/awtterpip/bevy_oxr"
license = "MIT/Apache-2.0"

[dependencies]
bevy_openxr.path = "./crates/bevy_openxr"
bevy_xr.path = "./crates/bevy_xr"
bevy.workspace = true

[workspace]
members = ["crates/*", "crates/bevy_openxr/examples/android","crates/bevy_webxr/examples/minimal"]

[workspace.dependencies]
bevy = "0.13.2"
[profile.release]
debug = true
