[package]
name = "bevy_mod_xr"
description = "semi generic Xr Api for Community Driven XR in Bevy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["gamedev", "bevy", "Xr", "Vr"]

[package.metadata.docs.rs]
features = ["bevy/x11"]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
