[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
# default-features is false because it for some reason complains when trying to statically link openxr
bevy_oxr = { path = "../../"}
bevy_rapier3d = { git = "https://github.com/Schmarni-Dev/bevy_rapier" }
color-eyre = "0.6.2"

# on android for some reason its slower with this enabled
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
